--- a/Translation/inference.ipynb
+++ b/Translation/inference.ipynb
@@ -2,32 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "333a7587",
+   "execution_count": 2,
+   "id": "1f405f88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing tokenizers...\n",
+      "Initializing model architecture with Attention...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model state from ltc_translator_attention.pt...\n",
+      "\n",
+      "--- English to French Translator ---\n",
+      "Type an English sentence to translate, or \"quit\" to exit.\n",
+      "\n",
+      "English > how are you\n",
+      "French   > comment vasz-vous ?\n",
+      "\n",
+      "Exiting translator.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "import re\n",
     "import unicodedata\n",
     "import os\n",
     "from enum import Enum\n",
     "\n",
     "# ========================================================================================\n",
-    "# SECTION 1: Model & Preprocessing Code (Copied from training script)\n",
-    "# This section contains the necessary class definitions and functions\n",
-    "# to rebuild the model architecture and process input text.\n",
+    "# SECTION 1: Model & Preprocessing Code (MODIFIED)\n",
+    "# The model definitions are updated to match the attention-based architecture.\n",
     "# ========================================================================================\n",
     "\n",
-    "# --- LTCCell and Model Definitions ---\n",
+    "# --- LTCCell and Enums (No change) ---\n",
     "class MappingType(Enum):\n",
     "    Identity = 0; Linear = 1; Affine = 2\n",
     "class ODESolver(Enum):\n",
     "    SemiImplicit = 0; Explicit = 1; RungeKutta = 2\n",
     "\n",
     "class LTCCell(nn.Module):\n",
-    "    # This class is copied verbatim from your training script.\n",
+    "    # This class is copied verbatim from your training script. It does not need changes.\n",
     "    def __init__(self, input_size, num_units, solver=ODESolver.SemiImplicit, solver_clip=5.0):\n",
     "        super(LTCCell, self).__init__(); self._input_size = input_size; self._num_units = num_units; self._solver = solver\n",
     "        self._solver_clip = solver_clip; self._ode_solver_unfolds = 6; self._input_mapping = MappingType.Affine\n",
@@ -114,42 +138,82 @@
     "        self.W.data.clamp_(min=self._w_min_value, max=self._w_max_value)\n",
     "        self.sensory_W.data.clamp_(min=self._w_min_value, max=self._w_max_value)\n",
     "\n",
+    "# --- NEW/MODIFIED Model Architecture ---\n",
     "class EncoderLTC(nn.Module):\n",
     "    def __init__(self, input_size, embed_size, hidden_size):\n",
-    "        super(EncoderLTC, self).__init__(); self.hidden_size = hidden_size\n",
+    "        super(EncoderLTC, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
     "        self.embedding = nn.Embedding(input_size, embed_size)\n",
-    "        self.ltc_cell = LTCCell(embed_size, hidden_size)\n",
+    "        self.ltc_cell_fw = LTCCell(embed_size, hidden_size)\n",
+    "        self.ltc_cell_bw = LTCCell(embed_size, hidden_size)\n",
+    "        self.fc = nn.Linear(hidden_size * 2, hidden_size)\n",
+    "\n",
     "    def forward(self, x):\n",
     "        seq_length, batch_size = x.shape\n",
-    "        hidden_state = torch.zeros(batch_size, self.hidden_size).to(x.device)\n",
-    "        embedded = self.embedding(x)\n",
+    "        hidden_state_fw = torch.zeros(batch_size, self.hidden_size).to(x.device)\n",
+    "        outputs_fw = []\n",
+    "        embedding = self.embedding(x)\n",
     "        for t in range(seq_length):\n",
-    "            hidden_state, _ = self.ltc_cell(embedded[t], hidden_state)\n",
-    "        return hidden_state\n",
+    "            hidden_state_fw, _ = self.ltc_cell_fw(embedding[t], hidden_state_fw)\n",
+    "            outputs_fw.append(hidden_state_fw)\n",
+    "        \n",
+    "        hidden_state_bw = torch.zeros(batch_size, self.hidden_size).to(x.device)\n",
+    "        outputs_bw = []\n",
+    "        for t in range(seq_length - 1, -1, -1):\n",
+    "            hidden_state_bw, _ = self.ltc_cell_bw(embedding[t], hidden_state_bw)\n",
+    "            outputs_bw.append(hidden_state_bw)\n",
+    "        outputs_bw = outputs_bw[::-1]\n",
+    "        \n",
+    "        outputs_fw = torch.stack(outputs_fw)\n",
+    "        outputs_bw = torch.stack(outputs_bw)\n",
+    "        \n",
+    "        encoder_outputs = torch.cat((outputs_fw, outputs_bw), dim=2)\n",
+    "        final_hidden = torch.cat((hidden_state_fw, hidden_state_bw), dim=1)\n",
+    "        decoder_initial_hidden = torch.tanh(self.fc(final_hidden))\n",
+    "        return encoder_outputs, decoder_initial_hidden\n",
+    "\n",
+    "class Attention(nn.Module):\n",
+    "    def __init__(self, enc_hid_dim, dec_hid_dim):\n",
+    "        super().__init__()\n",
+    "        self.attn = nn.Linear((enc_hid_dim * 2) + dec_hid_dim, dec_hid_dim)\n",
+    "        self.v = nn.Linear(dec_hid_dim, 1, bias = False)\n",
+    "\n",
+    "    def forward(self, decoder_hidden, encoder_outputs):\n",
+    "        src_len = encoder_outputs.shape[0]\n",
+    "        repeated_decoder_hidden = decoder_hidden.unsqueeze(1).repeat(1, src_len, 1)\n",
+    "        encoder_outputs = encoder_outputs.permute(1, 0, 2)\n",
+    "        energy = torch.tanh(self.attn(torch.cat((repeated_decoder_hidden, encoder_outputs), dim=2)))\n",
+    "        attention = self.v(energy).squeeze(2)\n",
+    "        return F.softmax(attention, dim=1)\n",
     "\n",
     "class DecoderLTC(nn.Module):\n",
     "    def __init__(self, output_size, embed_size, hidden_size):\n",
-    "        super(DecoderLTC, self).__init__(); self.hidden_size = hidden_size\n",
+    "        super(DecoderLTC, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.attention = Attention(hidden_size, hidden_size)\n",
     "        self.embedding = nn.Embedding(output_size, embed_size)\n",
-    "        self.ltc_cell = LTCCell(embed_size, hidden_size)\n",
+    "        self.ltc_cell = LTCCell(embed_size + (hidden_size * 2), hidden_size)\n",
     "        self.fc = nn.Linear(hidden_size, output_size)\n",
-    "    def forward(self, x, hidden_state):\n",
+    "\n",
+    "    def forward(self, x, hidden_state, encoder_outputs):\n",
+    "        attention_weights = self.attention(hidden_state, encoder_outputs).unsqueeze(1)\n",
+    "        encoder_outputs = encoder_outputs.permute(1, 0, 2)\n",
+    "        context_vector = torch.bmm(attention_weights, encoder_outputs).permute(1, 0, 2)\n",
     "        x = x.unsqueeze(0)\n",
     "        embedded = self.embedding(x)\n",
-    "        output, hidden_state = self.ltc_cell(embedded[0], hidden_state)\n",
+    "        ltc_input = torch.cat((embedded, context_vector), dim=2)\n",
+    "        output, hidden_state = self.ltc_cell(ltc_input.squeeze(0), hidden_state)\n",
     "        predictions = self.fc(output)\n",
     "        return predictions, hidden_state\n",
     "\n",
     "class Seq2SeqLTC(nn.Module):\n",
-    "    # This Seq2Seq class is slightly simplified as it does not need the training-specific\n",
-    "    # forward pass with teacher forcing. We only need the encoder and decoder components.\n",
-    "    def __init__(self, encoder, decoder, target_vocab_size, device):\n",
-    "        super(Seq2SeqLTC, self).__init__(); self.encoder = encoder; self.decoder = decoder\n",
-    "        self.target_vocab_size = target_vocab_size; self.device = device\n",
-    "    def forward(self, source, target, teacher_force_ratio=0.5): # This method is not used in inference\n",
-    "        raise NotImplementedError(\"Use encoder and decoder directly for inference.\")\n",
+    "    def __init__(self, encoder, decoder, device):\n",
+    "        super(Seq2SeqLTC, self).__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.device = device\n",
     "\n",
-    "# --- Tokenizer ---\n",
+    "# --- Tokenizer and Preprocessing (No changes) ---\n",
     "class Tokenizer:\n",
     "    def __init__(self, encoding_name=\"cl100k_base\"):\n",
     "        import tiktoken\n",
@@ -171,107 +235,83 @@
     "        if not base_ids: return \"\"\n",
     "        return self._encoding.decode(base_ids)\n",
     "\n",
-    "# --- Preprocessing Functions ---\n",
     "def unicode_to_ascii(s):\n",
     "    return ''.join(c for c in unicodedata.normalize('NFD', s) if unicodedata.category(c) != 'Mn')\n",
     "\n",
     "def preprocess_sentence(w):\n",
     "    w = str(w)\n",
     "    w = unicode_to_ascii(w.lower().strip())\n",
-    "    w = re.sub(r\"([?.!,¿])\", r\" \\1 \", w)\n",
     "    w = re.sub(r'[\" \"]+', \" \", w)\n",
-    "    w = re.sub(r\"[^a-zA-Z?.!,¿]+\", \" \", w)\n",
     "    w = w.strip()\n",
     "    return w\n",
     "\n",
+    "\n",
     "# ========================================================================================\n",
-    "# SECTION 2: Inference Configuration\n",
+    "# SECTION 2: Inference Configuration (No changes)\n",
     "# ========================================================================================\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "MODEL_SAVE_PATH = \"ltc_translator_best.pt\"\n",
+    "MODEL_SAVE_PATH = \"ltc_translator_attention.pt\"\n",
     "EMBED_SIZE = 256\n",
     "HIDDEN_SIZE = 512\n",
     "\n",
     "# ========================================================================================\n",
-    "# SECTION 3: Translation Function\n",
+    "# SECTION 3: Translation Function (MODIFIED)\n",
     "# ========================================================================================\n",
     "def translate_sentence(model, sentence, tokenizer_en, tokenizer_fr, device, max_length=50):\n",
-    "    \"\"\"\n",
-    "    Translates a single sentence from English to French.\n",
-    "    \"\"\"\n",
-    "    # Set model to evaluation mode\n",
     "    model.eval()\n",
-    "\n",
-    "    # Preprocess and tokenize the source sentence\n",
     "    processed_sentence = preprocess_sentence(sentence)\n",
     "    src_tokens = tokenizer_en.encode(processed_sentence)\n",
-    "    \n",
-    "    # Add batch dimension (batch size = 1) and move to device\n",
     "    src_tensor = torch.tensor(src_tokens).unsqueeze(1).to(device)\n",
     "\n",
-    "    # Disable gradient calculation for inference\n",
     "    with torch.no_grad():\n",
-    "        # Get the context vector from the encoder\n",
-    "        hidden_state = model.encoder(src_tensor)\n",
+    "        # Encoder now returns all outputs and the initial decoder hidden state\n",
+    "        encoder_outputs, hidden_state = model.encoder(src_tensor)\n",
     "\n",
-    "    # Initialize the list of target tokens with the <sos> token\n",
     "    trg_indexes = [tokenizer_fr.sos_id]\n",
     "\n",
-    "    # Generate the translation token by token\n",
     "    for _ in range(max_length):\n",
-    "        # Get the last predicted token\n",
     "        trg_tensor = torch.tensor([trg_indexes[-1]], device=device)\n",
     "\n",
-    "        # Feed the current token and the hidden state to the decoder\n",
     "        with torch.no_grad():\n",
-    "            output, hidden_state = model.decoder(trg_tensor, hidden_state)\n",
+    "            # Decoder now requires encoder_outputs at every step for attention\n",
+    "            output, hidden_state = model.decoder(trg_tensor, hidden_state, encoder_outputs)\n",
     "        \n",
-    "        # Get the token with the highest probability\n",
     "        pred_token = output.argmax(1).item()\n",
     "        trg_indexes.append(pred_token)\n",
     "\n",
-    "        # Stop if the <eos> token is generated\n",
     "        if pred_token == tokenizer_fr.eos_id:\n",
     "            break\n",
     "            \n",
-    "    # Decode the list of token IDs back to a French sentence\n",
     "    trg_tokens_decoded = tokenizer_fr.decode(trg_indexes)\n",
-    "\n",
     "    return trg_tokens_decoded\n",
     "\n",
-    "\n",
     "# ========================================================================================\n",
-    "# SECTION 4: Main Execution Block\n",
+    "# SECTION 4: Main Execution Block (MODIFIED)\n",
     "# ========================================================================================\n",
     "if __name__ == \"__main__\":\n",
-    "    # Check if the model file exists\n",
     "    if not os.path.exists(MODEL_SAVE_PATH):\n",
     "        print(f\"Error: Model file not found at '{MODEL_SAVE_PATH}'\")\n",
     "        print(\"Please run the training script first to generate the model file.\")\n",
     "        exit()\n",
     "\n",
-    "    # --- Initialize tokenizers ---\n",
     "    print(\"Initializing tokenizers...\")\n",
     "    tokenizer_en = Tokenizer()\n",
     "    tokenizer_fr = Tokenizer()\n",
     "    INPUT_DIM = tokenizer_en.vocab_size\n",
     "    OUTPUT_DIM = tokenizer_fr.vocab_size\n",
     "\n",
-    "    # --- Rebuild the model architecture ---\n",
-    "    print(\"Initializing model architecture...\")\n",
+    "    # --- Rebuild the CORRECT model architecture ---\n",
+    "    print(\"Initializing model architecture with Attention...\")\n",
     "    encoder = EncoderLTC(INPUT_DIM, EMBED_SIZE, HIDDEN_SIZE)\n",
     "    decoder = DecoderLTC(OUTPUT_DIM, EMBED_SIZE, HIDDEN_SIZE)\n",
-    "    model = Seq2SeqLTC(encoder, decoder, OUTPUT_DIM, DEVICE).to(DEVICE)\n",
+    "    model = Seq2SeqLTC(encoder, decoder, DEVICE).to(DEVICE)\n",
     "\n",
-    "    # --- Load the saved weights ---\n",
     "    print(f\"Loading model state from {MODEL_SAVE_PATH}...\")\n",
-    "    # Use map_location to ensure the model loads correctly whether on CPU or GPU\n",
     "    model.load_state_dict(torch.load(MODEL_SAVE_PATH, map_location=DEVICE))\n",
     "\n",
     "    print(\"\\n--- English to French Translator ---\")\n",
     "    print('Type an English sentence to translate, or \"quit\" to exit.\\n')\n",
     "\n",
-    "    # --- Interactive loop ---\n",
     "    while True:\n",
     "        try:\n",
     "            sentence = input(\"English  > \")\n",
@@ -280,6 +320,7 @@
     "                break\n",
     "            \n",
     "            translation = translate_sentence(model, sentence, tokenizer_en, tokenizer_fr, DEVICE)\n",
+    "            print(f\"English > {sentence}\")\n",
     "            print(f\"French   > {translation}\\n\")\n",
     "\n",
     "        except KeyboardInterrupt:\n",
@@ -290,10 +331,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f405f88",
+   "id": "c63e256a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Scale up (8gb dataset on kaggle)\n",
+    "# Evaluation pipeline (for benchmarking against LSTM, RNN)\n",
+    "# Hybrid (SSM)\n",
+    "\n",
+    "# LFM vs quantized LLM on FLOPS and params\n",
+    "# RAG, summarization"
+   ]
   }
  ],
  "metadata": {
@@ -312,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
